fix de parametros de busqueda y manejo de usuario